Add rsync:// URLs to headers

--- a/puppet/modules/freight/files/deb-HEADER.html
+++ b/puppet/modules/freight/files/deb-HEADER.html
@@ -19,6 +19,8 @@ deb http://deb.theforeman.org/ wheezy nightly
 deb http://deb.theforeman.org/ squeeze nightly
 deb http://deb.theforeman.org/ precise nightly</pre>
 
+<p>This repo is also available over rsync at <code>rsync://deb.theforeman.org/deb</code>.</p>
+
 <p>You can find the installation instructions <a href="http://theforeman.org/projects/foreman/wiki/Debian-Ubuntu_installation_by_packages">here</a>, but we recommend using our <a href="http://theforeman.org/projects/foreman/wiki/Foreman_installer">Installer</a>
 
 <p>If you have any issues, you can find the mailing list on <a href="https://groups.google.com/forum/?fromgroups#!forum/foreman-users">Google Groups</a> or on IRC (Freenode, #theforeman)</p>
