--- a/puppet/modules/freight/files/stagingdeb-HEADER.html
+++ b/puppet/modules/freight/files/stagingdeb-HEADER.html
@@ -5,9 +5,11 @@
 <p>This repo is for building and testing scratch packages before pushing them to the real repos</p>
 
 <p>Every user will have his packages pushd to his own component, based on the github repository used.<br/>
-So if you specified 'ares' as the github repo, and 'wheezy' as the dsitro, you package is at:
+So if you specified 'ares' as the github repo, and 'wheezy' as the dsitro, you package is at:</p>
 
-<strong>deb http://debstaging.theforeman.org/ wheezy ares</strong>
+<p><strong>deb http://debstaging.theforeman.org/ wheezy ares</strong></p>
 
-Enjoy</p>
+<p>This repo is also available over rsync at <code>rsync://stagingdeb.theforeman.org/stagingdeb</code>.</p>
+
+<p>Enjoy</p>
 </body>
