--- a/puppet/modules/web/files/yum-HEADER.html
+++ b/puppet/modules/web/files/yum-HEADER.html
@@ -41,6 +41,15 @@
 
 <p>Plugin repos are not GPG signed.</p>
 
+<h3>Accessing this repo</h3>
+
+This repository is available over both HTTP and rsync:
+
+<ul>
+  <li>http://yum.theforeman.org</li>
+  <li>rsync://yum.theforeman.org/yum</li>
+</ul>
+
 <h3>Support</h3>
 
 <p>You can find the installation instructions <a href="http://theforeman.org/manuals/latest/index.html#3.3InstallFromPackages">here</a>, but we strongly recommend using our <a href="http://theforeman.org/manuals/latest/index.html#3.2ForemanInstaller">Installer</a> (which uses RPMs and Puppet).
