Update GPG key ID

--- a/puppet/modules/web/files/yum-HEADER.html
+++ b/puppet/modules/web/files/yum-HEADER.html
@@ -18,7 +18,7 @@
   <li><a href="http://yum.theforeman.org/releases/1.5/el6/x86_64/foreman-release.rpm">http://yum.theforeman.org/releases/1.5/el6/x86_64/foreman-release.rpm</a></li>
 </ul>
 
-<p>All release packages are signed with "Foreman Archive Signing Key packages@theforeman.org" (0xE775FF07).  The public key is available in <a href="http://yum.theforeman.org/RPM-GPG-KEY-foreman">RPM-GPG-KEY-foreman</a> or the foreman-release RPMs.</p>
+<p>All release packages are signed with "Foreman Automatic Signing Key (2014) packages@theforeman.org" (0x1AA043B8).  The public key is available in <a href="http://yum.theforeman.org/RPM-GPG-KEY-foreman">RPM-GPG-KEY-foreman</a> or the foreman-release RPMs.</p>
 
 <p>A symlink is available at <code>/releases/latest</code> which always points to the latest stable release.  Please be careful when using this, as release upgrades often require some manual intervention (see release notes).</p>
 
