fix typos in stagingdeb header

--- a/puppet/modules/freight/files/stagingdeb-HEADER.html
+++ b/puppet/modules/freight/files/stagingdeb-HEADER.html
@@ -1,13 +1,13 @@
-<title>The Debian Foreman repo</title>
+<title>The Debian Foreman staging repo</title>
 <head><h1>The Debian Foreman staging repo</h1></head>
 <body>
 
 <p>This repo is for building and testing scratch packages before pushing them to the real repos</p>
 
-<p>Every user will have his packages pushd to his own component, based on the github repository used.<br/>
-So if you specified 'ares' as the github repo, and 'wheezy' as the dsitro, you package is at:</p>
+<p>Every user will have the packages pushed to thier own component, based on the github repository used.<br/>
+So if you specified 'ares' as the github repo, and 'wheezy' as the distro, your package is at:</p>
 
-<p><strong>deb http://debstaging.theforeman.org/ wheezy ares</strong></p>
+<p><strong>deb http://stagingdeb.theforeman.org/ wheezy ares</strong></p>
 
 <p>This repo is also available over rsync at <code>rsync://stagingdeb.theforeman.org/stagingdeb</code>.</p>
 
