--- a/puppet/modules/freight/files/deb-HEADER.html
+++ b/puppet/modules/freight/files/deb-HEADER.html
@@ -11,13 +11,20 @@
 
 <pre>deb http://deb.theforeman.org/ wheezy stable
 deb http://deb.theforeman.org/ squeeze stable
+deb http://deb.theforeman.org/ trusty stable
 deb http://deb.theforeman.org/ precise stable
 deb http://deb.theforeman.org/ wheezy rc
 deb http://deb.theforeman.org/ squeeze rc
+deb http://deb.theforeman.org/ trusty rc
 deb http://deb.theforeman.org/ precise rc
 deb http://deb.theforeman.org/ wheezy nightly
 deb http://deb.theforeman.org/ squeeze nightly
-deb http://deb.theforeman.org/ precise nightly</pre>
+deb http://deb.theforeman.org/ trusty nightly
+deb http://deb.theforeman.org/ precise nightly
+
+deb http://deb.theforeman.org/ plugins stable
+deb http://deb.theforeman.org/ plugins rc
+deb http://deb.theforeman.org/ plugins nightly</pre>
 
 <p>This repo is also available over rsync at <code>rsync://deb.theforeman.org/deb</code>.</p>
 
