Fix apt sources example, add plugins example

--- a/puppet/modules/freight/files/stagingdeb-HEADER.html
+++ b/puppet/modules/freight/files/stagingdeb-HEADER.html
@@ -7,7 +7,11 @@
 <p>Every user will have the packages pushed to thier own component, based on the github repository used.<br/>
 So if you specified 'ares' as the github repo, and 'wheezy' as the distro, your package is at:</p>
 
-<p><strong>deb http://stagingdeb.theforeman.org/ wheezy ares</strong></p>
+<p><strong>deb http://stagingdeb.theforeman.org/ wheezy ares-nightly</strong></p>
+
+<p>Plugins are in a similar per-user component:</p>
+
+<p><strong>deb http://stagingdeb.theforeman.org/ plugins ares</strong></p>
 
 <p>This repo is also available over rsync at <code>rsync://stagingdeb.theforeman.org/stagingdeb</code>.</p>
 
