add Debian/jessie build support

--- a/puppet/modules/freight/files/deb-HEADER.html
+++ b/puppet/modules/freight/files/deb-HEADER.html
@@ -10,15 +10,15 @@
 <p>Currently we have</p>
 
 <pre>deb http://deb.theforeman.org/ wheezy stable
-deb http://deb.theforeman.org/ squeeze stable
+deb http://deb.theforeman.org/ jessie stable
 deb http://deb.theforeman.org/ trusty stable
 deb http://deb.theforeman.org/ precise stable
 deb http://deb.theforeman.org/ wheezy rc
-deb http://deb.theforeman.org/ squeeze rc
+deb http://deb.theforeman.org/ jessie rc
 deb http://deb.theforeman.org/ trusty rc
 deb http://deb.theforeman.org/ precise rc
 deb http://deb.theforeman.org/ wheezy nightly
-deb http://deb.theforeman.org/ squeeze nightly
+deb http://deb.theforeman.org/ jessie nightly
 deb http://deb.theforeman.org/ trusty nightly
 deb http://deb.theforeman.org/ precise nightly
 
