Change preferred rsync hostname to rsync.tf.org

--- a/puppet/modules/freight/files/deb-HEADER.html
+++ b/puppet/modules/freight/files/deb-HEADER.html
@@ -26,7 +26,7 @@ deb http://deb.theforeman.org/ plugins stable
 deb http://deb.theforeman.org/ plugins rc
 deb http://deb.theforeman.org/ plugins nightly</pre>
 
-<p>This repo is also available over rsync at <code>rsync://deb.theforeman.org/deb</code>.</p>
+<p>This repo is also available over rsync at <code>rsync://rsync.theforeman.org/deb</code>.</p>
 
 <p>You can find the installation instructions <a href="http://theforeman.org/projects/foreman/wiki/Debian-Ubuntu_installation_by_packages">here</a>, but we recommend using our <a href="http://theforeman.org/projects/foreman/wiki/Foreman_installer">Installer</a>
 
