--- a/puppet/modules/web/files/yum-HEADER.html
+++ b/puppet/modules/web/files/yum-HEADER.html
@@ -48,7 +48,7 @@ This repository is available over both HTTP and rsync:
 
 <ul>
   <li>http://yum.theforeman.org</li>
-  <li>rsync://yum.theforeman.org/yum</li>
+  <li>rsync://rsync.theforeman.org/yum</li>
 </ul>
 
 <h3>Support</h3>
