add Debian/stretch builders

--- a/puppet/modules/freight/files/deb-HEADER.html
+++ b/puppet/modules/freight/files/deb-HEADER.html
@@ -11,14 +11,17 @@
 
 <pre>deb http://deb.theforeman.org/ wheezy stable
 deb http://deb.theforeman.org/ jessie stable
+deb http://deb.theforeman.org/ stretch stable
 deb http://deb.theforeman.org/ trusty stable
 deb http://deb.theforeman.org/ precise stable
 deb http://deb.theforeman.org/ wheezy rc
 deb http://deb.theforeman.org/ jessie rc
+deb http://deb.theforeman.org/ stretch rc
 deb http://deb.theforeman.org/ trusty rc
 deb http://deb.theforeman.org/ precise rc
 deb http://deb.theforeman.org/ wheezy nightly
 deb http://deb.theforeman.org/ jessie nightly
+deb http://deb.theforeman.org/ stretch nightly
 deb http://deb.theforeman.org/ trusty nightly
 deb http://deb.theforeman.org/ precise nightly
 
