Use more HTTPS URLs

--- a/puppet/modules/web/files/yum-HEADER.html
+++ b/puppet/modules/web/files/yum-HEADER.html
@@ -19,7 +19,7 @@
   <li><a href="http://yum.theforeman.org/releases/latest/f24/x86_64/foreman-release.rpm">http://yum.theforeman.org/releases/latest/f24/x86_64/foreman-release.rpm</a></li>
 </ul>
 
-<p>Release packages <a href="http://theforeman.org/security.html#GPGkeys">are signed with a new key for each major release</a>.  The public key is available in the RPM-GPG-KEY-foreman file within each version directory or the foreman-release RPMs.</p>
+<p>Release packages <a href="https://theforeman.org/security.html#GPGkeys">are signed with a new key for each major release</a>.  The public key is available in the RPM-GPG-KEY-foreman file within each version directory or the foreman-release RPMs.</p>
 
 <p>A symlink is available at <code>/releases/latest</code> which always points to the latest stable release.  Please be careful when using this, as release upgrades often require some manual intervention (see release notes).</p>
 
@@ -31,7 +31,7 @@
 
 <h3>Plugins</h3>
 
-<p>A number of Foreman plugins are available in the plugin repos, see <a href="http://projects.theforeman.org/projects/foreman/wiki/Plugins">Plugins</a> and <a href="http://projects.theforeman.org/projects/foreman/wiki/List_of_Plugins">List of Plugins</a> for more information.</p>
+<p>A number of Foreman plugins are available in the plugin repos, see <a href="https://projects.theforeman.org/projects/foreman/wiki/Plugins">Plugins</a> and <a href="https://projects.theforeman.org/projects/foreman/wiki/List_of_Plugins">List of Plugins</a> for more information.</p>
 
 <p>Plugin repos are structured by the Foreman version that they're compatible with in the format <code>/plugins/VERSION/DIST/ARCH</code>, e.g.</p>
 
@@ -53,7 +53,7 @@ This repository is available over both HTTP and rsync:
 
 <h3>Support</h3>
 
-<p>You can find the installation instructions <a href="http://theforeman.org/manuals/latest/index.html#3.3InstallFromPackages">here</a>, but we strongly recommend using our <a href="http://theforeman.org/manuals/latest/index.html#3.2ForemanInstaller">Installer</a> (which uses RPMs and Puppet).
+<p>You can find the installation instructions <a href="https://theforeman.org/manuals/latest/index.html#3.3InstallFromPackages">here</a>, but we strongly recommend using our <a href="https://theforeman.org/manuals/latest/index.html#3.2ForemanInstaller">Installer</a> (which uses RPMs and Puppet).
 
 <p>If you have any issues, you can find the mailing list on <a href="https://groups.google.com/forum/?fromgroups#!forum/foreman-users">Google Groups</a> or on IRC (Freenode, #theforeman)</p>
 <br/>
