Update links to the manual

--- a/puppet/modules/freight/files/deb-HEADER.html
+++ b/puppet/modules/freight/files/deb-HEADER.html
@@ -28,7 +28,7 @@ deb http://deb.theforeman.org/ plugins nightly</pre>
 
 <p>This repo is also available over rsync at <code>rsync://rsync.theforeman.org/deb</code>.</p>
 
-<p>You can find the installation instructions <a href="http://theforeman.org/projects/foreman/wiki/Debian-Ubuntu_installation_by_packages">here</a>, but we recommend using our <a href="http://theforeman.org/projects/foreman/wiki/Foreman_installer">Installer</a>
+<p>You can find the installation instructions <a href="https://theforeman.org/manuals/1.15/index.html#3.3InstallFromPackages">here</a>, but we recommend using our <a href="https://theforeman.org/manuals/1.15/index.html#3.2ForemanInstaller">Installer</a>
 
 <p>If you have any issues, you can find the mailing list on <a href="https://groups.google.com/forum/?fromgroups#!forum/foreman-users">Google Groups</a> or on IRC (Freenode, #theforeman)</p>
 <br/>
