--- a/puppet/modules/freight/files/deb-HEADER.html
+++ b/puppet/modules/freight/files/deb-HEADER.html
@@ -30,6 +30,6 @@ deb http://deb.theforeman.org/ plugins nightly</pre>
 
 <p>You can find the installation instructions <a href="https://theforeman.org/manuals/1.15/index.html#3.3InstallFromPackages">here</a>, but we recommend using our <a href="https://theforeman.org/manuals/1.15/index.html#3.2ForemanInstaller">Installer</a>
 
-<p>If you have any issues, you can find the mailing list on <a href="https://groups.google.com/forum/?fromgroups#!forum/foreman-users">Google Groups</a> or on IRC (Freenode, #theforeman)</p>
+<p>If you have any issues, you can find the forum at <a href="https://community.theforeman.org/">community.theforeman.org</a> or on IRC (<a href="https://freenode.net/">freenode</a>, <a href="irc://chat.freenode.net/theforeman">#theforeman</a>)</p>
 <br/>
 </body>
