--- a/puppet/modules/web/files/downloads-HEADER.html
+++ b/puppet/modules/web/files/downloads-HEADER.html
@@ -12,6 +12,6 @@
 
 <p>You can find installation instructions <a href="http://theforeman.org/manuals/latest/index.html#3.3InstallFromPackages">here</a>, but we strongly recommend using our <a href="http://theforeman.org/manuals/latest/index.html#3.2ForemanInstaller">Installer</a>.
 
-<p>If you have any issues, you can find the mailing list on <a href="https://groups.google.com/forum/?fromgroups#!forum/foreman-users">Google Groups</a> or on IRC (Freenode, #theforeman)</p>
+<p>If you have any issues, you can find the forum at <a href="https://community.theforeman.org/">community.theforeman.org</a> or on IRC (<a href="https://freenode.net/">freenode</a>, <a href="irc://chat.freenode.net/theforeman">#theforeman</a>)</p>
 <br/>
 </body>
