--- a/puppet/modules/web/files/yum-HEADER.html
+++ b/puppet/modules/web/files/yum-HEADER.html
@@ -54,6 +54,6 @@ This repository is available over both HTTP and rsync:
 
 <p>You can find the installation instructions <a href="https://theforeman.org/manuals/latest/index.html#3.3InstallFromPackages">here</a>, but we strongly recommend using our <a href="https://theforeman.org/manuals/latest/index.html#3.2ForemanInstaller">Installer</a> (which uses RPMs and Puppet).
 
-<p>If you have any issues, you can find the mailing list on <a href="https://groups.google.com/forum/?fromgroups#!forum/foreman-users">Google Groups</a> or on IRC (Freenode, #theforeman)</p>
+<p>If you have any issues, you can find the forum at <a href="https://community.theforeman.org/">community.theforeman.org</a> or on IRC (<a href="https://freenode.net/">freenode</a>, <a href="irc://chat.freenode.net/theforeman">#theforeman</a>)</p>
 <br/>
 </body>
