Drop jessie and add bionic to deb README

--- a/puppet/modules/freight/files/deb-HEADER.html
+++ b/puppet/modules/freight/files/deb-HEADER.html
@@ -9,15 +9,15 @@
 
 <p>Currently we have</p>
 
-<pre>deb http://deb.theforeman.org/ jessie stable
-deb http://deb.theforeman.org/ stretch stable
+<pre> deb http://deb.theforeman.org/ stretch stable
 deb http://deb.theforeman.org/ xenial stable
-deb http://deb.theforeman.org/ jessie &lt;version&gt;
+deb http://deb.theforeman.org/ bionic stable
 deb http://deb.theforeman.org/ stretch &lt;version&gt;
 deb http://deb.theforeman.org/ xenial &lt;version&gt;
-deb http://deb.theforeman.org/ jessie nightly
+deb http://deb.theforeman.org/ bionic &lt;version&gt;
 deb http://deb.theforeman.org/ stretch nightly
 deb http://deb.theforeman.org/ xenial nightly
+deb http://deb.theforeman.org/ bionic nightly
 
 deb http://deb.theforeman.org/ plugins stable
 deb http://deb.theforeman.org/ plugins &lt;version&gt;
