don't mention old debian releases

--- a/puppet/modules/freight/files/deb-HEADER.html
+++ b/puppet/modules/freight/files/deb-HEADER.html
@@ -6,15 +6,15 @@
 
 <p>Currently we have</p>
 
-<pre>deb http://deb.theforeman.org/ stretch &lt;version&gt;
+<pre>
 deb http://deb.theforeman.org/ buster &lt;version&gt;
-deb http://deb.theforeman.org/ xenial &lt;version&gt;
 deb http://deb.theforeman.org/ bionic &lt;version&gt;
 deb http://deb.theforeman.org/ buster nightly
 deb http://deb.theforeman.org/ bionic nightly
 
 deb http://deb.theforeman.org/ plugins &lt;version&gt;
-deb http://deb.theforeman.org/ plugins nightly</pre>
+deb http://deb.theforeman.org/ plugins nightly
+</pre>
 
 <p>An example of how to add it:</p>
 
