document archivedeb policy

--- a/puppet/modules/freight/files/deb-HEADER.html
+++ b/puppet/modules/freight/files/deb-HEADER.html
@@ -26,6 +26,8 @@ echo "deb http://deb.theforeman.org/ plugins nightly" >> /etc/apt/sources.list.d
 
 <p>This repo is also available over rsync at <code>rsync://rsync.theforeman.org/deb</code>.</p>
 
+<p>Older Foreman releases are archived to <a href="//archivedeb.theforeman.org">archivedeb.theforeman.org</a> once they have been unsupported for two release cycles.
+
 <p>You can find the installation instructions <a href="https://theforeman.org/manuals/latest/index.html#3.3InstallFromPackages">here</a>, but we recommend using our <a href="https://theforeman.org/manuals/latest/index.html#3.2ForemanInstaller">Installer</a>
 
 <p>If you have any issues, you can find the forum at <a href="https://community.theforeman.org/">community.theforeman.org</a> or on IRC (<a href="https://freenode.net/">freenode</a>, <a href="irc://chat.freenode.net/theforeman">#theforeman</a>)</p>
