--- a/puppet/modules/freight/files/archivedeb-HEADER.html
+++ b/puppet/modules/freight/files/archivedeb-HEADER.html
@@ -23,4 +23,4 @@ echo "deb http://archivedeb.theforeman.org/ plugins 1.24" >> /etc/apt/sources.li
 
 <p>This repo is also available over rsync at <code>rsync://rsync.theforeman.org/archivedeb</code>.</p>
 
-<p>If you have any issues, you can find the forum at <a href="https://community.theforeman.org/">community.theforeman.org</a> or on IRC (<a href="https://freenode.net/">freenode</a>, <a href="irc://chat.freenode.net/theforeman">#theforeman</a>)</p>
+<p>If you have any issues, you can find the forum at <a href="https://community.theforeman.org/">community.theforeman.org</a> or on IRC (<a href="https://libera.chat/">libera.chat</a>, <a href="irc://irc.libera.chat/theforeman">#theforeman</a>)</p>
