Update yum.theforeman.org header
93e4aa7cc94555dfba124193df7187ccd3428588 started to fix the HTML
structure but left in a spurious body tag.

It also updates the version to the latest and adds EL8 examples.

--- a/puppet/modules/web/files/yum/HEADER.html
+++ b/puppet/modules/web/files/yum/HEADER.html
@@ -1,13 +1,14 @@
 <h1>yum.theforeman.org</h1>
-<body>
 
 <h3>Stable Foreman releases</h3>
 
 <p>Releases are available under <code>/releases/VERSION/DIST/ARCH</code>, e.g.</p>
 
 <ul>
-  <li>/releases/1.17/el7/x86_64</li>
+  <li>/releases/2.5/el7/x86_64</li>
+  <li>/releases/2.5/el8/x86_64</li>
   <li>/releases/nightly/el7/x86_64</li>
+  <li>/releases/nightly/el8/x86_64</li>
 </ul>
 
 <p>foreman-release RPMs containing an appropriate .repo file are available with fixed URLs:</p>
@@ -34,8 +35,10 @@
 <p>Plugin repos are structured by the Foreman version that they're compatible with in the format <code>/plugins/VERSION/DIST/ARCH</code>, e.g.</p>
 
 <ul>
-  <li>/plugins/1.17/el7/x86_64</li>
+  <li>/plugins/2.5/el7/x86_64</li>
+  <li>/plugins/2.5/el8/x86_64</li>
   <li>/plugins/nightly/el7/x86_64</li>
+  <li>/plugins/nightly/el8/x86_64</li>
 </ul>
 
 <p>Plugin repos are not GPG signed.</p>
