--- a/puppet/modules/web/files/yum/pulpcore-HEADER.html
+++ b/puppet/modules/web/files/yum/pulpcore-HEADER.html
@@ -1,3 +1,3 @@
 <h1>Pulpcore packages</h1>
 
-These are RPM builds for [Pulp 3](https://pulpproject.org) and various plugins for use by [Katello](https://theforeman.org/plugins/katello/). They are only intended to be used by Katello. Only branches used by Katello are maintained. No explicit end of life announcements will be made.
+These are RPM builds for <a href="https://pulpproject.org">Pulp 3</a> and various plugins for use by <a href="https://theforeman.org/plugins/katello/">Katello</a>. They are only intended to be used by Katello. Only branches used by Katello are maintained. No explicit end of life announcements will be made.
