--- a/puppet/modules/freight/files/stagingdeb-HEADER.html
+++ b/puppet/modules/freight/files/stagingdeb-HEADER.html
@@ -3,9 +3,9 @@
 <p>This repo is for building and testing scratch packages before pushing them to the real repos</p>
 
 <p>Every user will have the packages pushed to their own component, based on the github repository used.<br/>
-So if you specified 'ares' as the github repo, and 'buster' as the distro, your package is at:</p>
+So if you specified 'ares' as the github repo, and 'bullseye' as the distro, your package is at:</p>
 
-<pre>deb http://stagingdeb.theforeman.org/ buster ares-nightly</pre>
+<pre>deb http://stagingdeb.theforeman.org/ bullseye ares-nightly</pre>
 
 <p>Plugins are in a similar per-user component:</p>
 
